# hotspot

./: .gitignore  GEMINI.md  RELEASE_NOTES.md  key_gen.txt  keys_final.txt  keys_gen_output.txt  package-lock.json  package.json  qc  release.ps1  tailwind.config.js  vite.config.ts
.github/workflows/: deploy-pwa.yml  publish.yml  release.yml
pwa/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
pwa/public/: manifest.json  sw.js
pwa/src/: App.tsx  index.css  main.tsx  store.ts
pwa/src/api/: network.ts  storage.ts
pwa/src/components/: LoginCard.tsx  SettingsCard.tsx  StatusCard.tsx
src/: App.tsx  index.css
src-tauri/: 2  Cargo.toml  build_output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: auth.rs  config.rs  hotspot_toggle.rs  mod.rs  network.rs  startup.rs  tray.rs
src-tauri/windows/: hooks.nsi
src/components/: CustomTitlebar.tsx  Dashboard.tsx  UpdateModal.tsx
src/components/dashboard/: LoginCard.tsx  SettingsCard.tsx  StatusCard.tsx
src/components/ui/: badge.tsx  input.tsx  switch.tsx
src/store/: hotspot.ts  index.ts  types.ts
src/store/slices/: authSlice.ts  networkSlice.ts  speedSlice.ts  uiSlice.ts  updateSlice.ts
~/.tauri/: hotspot.key  hotspot.key.pub
