[package]
name = "hotspot"
version = "0.1.0"
description = "Yurt interneti için otomatik giriş uygulaması"
authors = ["you"]
edition = "2021"

[lib]
name = "hotspot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
image = "0.25"
tauri-plugin-http = "2"
sysinfo = "0.29.11"
local-ip-address = "0.6.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
