[package]
name = "hotspot"
version = "0.5.53"
description = "Yurt interneti için otomatik giriş uygulaması"
authors = ["you"]
edition = "2021"
default-run = "hotspot"

[lib]
name = "hotspot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Revert to default for balanced builds
# lto = "thin" # DISABLED: Too slow for now
# opt-level = "s" # DISABLED: Too slow for now
strip = true # Remove debug symbols (fast & effective)

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
image = "0.25"
tauri-plugin-http = "2"
sysinfo = "0.29.11"
local-ip-address = "0.6.8"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2"
windows = { version = "0.62.2", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_RemoteDesktop",
    "Win32_System_StationsAndDesktops",
    "Win32_System_Environment"
] }
tauri-plugin-single-instance = "2.3.7"
winreg = "0.52"
windows-service = "0.7"
log = "0.4"
simplelog = "0.12"
chrono = "0.4"

[[bin]]
name = "hotspot-launcher"
path = "src/bin/launcher.rs"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
